--- a/txl/style.css
+++ b/txl/style.css
@@ -19,6 +19,7 @@ input [type='number'] {text-align: right}
 .txl_clean_table {border: none; width: 30em}
 
 td.extras_price, td.extras_subtotal, #totalextras {width: 3em; border: none; text-align: right;}
+.subtotal, #total {text-align: right}
 td.clean {border: none}
 td.extras_description {width: 15em; border: none;}
 td.extras_per {width: 32em; border: none; font-size: 0.8em; padding-left: 2em}
